# finatra

./: .bowerrc  .gitignore  .travis.yml  ADOPTERS.md  BUILD.bazel  CHANGELOG.md  CHANGELOG.rst  CHANGES  CODE_OF_CONDUCT.md  CONFIG.ini  CONTRIBUTING.md  Changelog.html  LICENSE  OWNERS  PROJECT.yml  README.markdown  README.markdown.template  README.md  Rakefile  THANKS  _config.yml  atom.xml  azure-pipelines.yml  bower.json  build.sbt  changelog.html  finatra  genindex.html  header.txt  index.html  init.txt  jvmopts  pom.xml  pushdocs.bash  pushsite.bash  release.properties  robots.txt  sbt  search.html  searchindex.js  (+1 more)
http-core/src/test/java/com/twitter/finatra/http/streaming/: BUILD  BUILD.bazel  FooClass.java  Lunch.java  StreamingRequestJavaTest.java  StreamingResponseJavaTest.java
http-core/src/test/scala/com/twitter/finatra/http/marshalling/: BUILD  BUILD.bazel  MessageBodyManagerTest.scala
inject/: BUILD  BUILD.bazel  GROUPS  README.md  pom.xml
inject-thrift-client-http-mapper/: BUILD  BUILD.bazel  README.md
inject-thrift-client-http-mapper/src/main/scala/: BUILD
inject-thrift-client-http-mapper/src/main/scala/com/twitter/finatra/thrift/: ThriftClientExceptionMapper.scala
inject-thrift-client-http-mapper/src/test/resources/: BUILD
inject-thrift-client-http-mapper/src/test/scala/: BUILD
inject-thrift-client-http-mapper/src/test/scala/com/twitter/finatra/multiserver/Add1HttpServer/: Add1Controller.scala  Add1Server.scala  Adder1ThriftClientModule.scala  AdderThriftClientModule.scala
inject-thrift-client-http-mapper/src/test/scala/com/twitter/finatra/multiserver/Add1ThriftServer/: AdderController.scala  AdderImpl.scala  AdderThriftServer.scala  FilteredAdder.scala
inject-thrift-client-http-mapper/src/test/scala/com/twitter/finatra/multiserver/Add2HttpServer/: Add1HttpClientModule.scala  Add2Controller.scala  Add2Server.scala
inject-thrift-client-http-mapper/src/test/scala/com/twitter/finatra/multiserver/AdderThriftServer/: AdderThriftController.scala  AdderThriftServer.scala
inject-thrift-client-http-mapper/src/test/scala/com/twitter/finatra/multiserver/CombinedServer/: AdderService.scala  AdminAdd1Request.scala  DoEverythingCombinedController.scala  DoEverythingCombinedServer.scala  (+1 more)
inject-thrift-client-http-mapper/src/test/thrift/: BUILD  BUILD.bazel  add1.thrift
inject/examples/java-server/: BUILD  README.md  build.sbt  build.sbt.for_release_branches_only
inject/examples/java-server/src/main/java/: BUILD
inject/examples/java-server/src/main/resources/: logback.xml
inject/examples/java-server/src/test/java/: BUILD
inject/inject-app/: BUILD  pom.xml
inject/inject-app/src/main/java/: BUILD
inject/inject-app/src/main/scala/: BUILD
inject/inject-app/src/test/java/: BUILD
inject/inject-app/src/test/resources/: logback-test.xml
inject/inject-app/src/test/scala/: BUILD
inject/inject-core/: BUILD  CONFIG.ini  pom.xml
inject/inject-core/src/main/scala/: BUILD
inject/inject-core/src/main/scala/com/twitter/inject/: BUILD  Flags.scala  Injector.scala  InjectorModule.scala  Logger.scala  Logging.scala  PrivateModule.scala  StackTransformer.scala  TwitterBaseModule.scala  TwitterInjector.scala  TwitterModule.scala  TwitterModuleFlags.scala  TwitterModuleLifecycle.scala  TwitterPrivateModule.scala  TypeUtils.scala
inject/inject-core/src/main/scala/net/codingwell/scalaguice/: InjectorExtensions.scala  KeyExtensions.scala  ScalaModule.scala  ScalaMultibinder.scala  SetProvider.scala  package.scala
inject/inject-core/src/test/java/: BUILD
inject/inject-core/src/test/scala/: BUILD
inject/inject-core/src/test/scala/com/twitter/inject/: BUILD  InMemoryStats.scala  InMemoryStatsReceiverUtility.scala  InMemoryTracer.scala  InjectUtils.scala  IntegrationTest.scala  IntegrationTestMixin.scala  Mockito.scala  Mockito2.scala  PoolUtils.scala  Resettable.scala  Test.scala  TestMixin.scala  TwitterTestModule.scala  WhenReadyMixin.scala  WordSpecIntegrationTest.scala  WordSpecTest.scala
inject/inject-core/src/test/scala/org/specs2/matcher/: BUILD  ScalaTestExpectations.scala
inject/inject-logback/src/main/scala/: BUILD
inject/inject-logback/src/test/resources/: logback-test.xml
inject/inject-logback/src/test/scala/: BUILD  BUILD.bazel
inject/inject-mdc/src/main/scala/: BUILD
inject/inject-modules/: BUILD  pom.xml
inject/inject-modules/src/main/scala/: BUILD
inject/inject-modules/src/test/scala/: BUILD
inject/inject-ports/src/main/scala/: BUILD
inject/inject-request-scope/: BUILD  pom.xml
inject/inject-request-scope/src/main/java/: BUILD
inject/inject-request-scope/src/main/scala/: BUILD
inject/inject-request-scope/src/test/resources/: BUILD
inject/inject-request-scope/src/test/scala/: BUILD
inject/inject-server/: BUILD  pom.xml
inject/inject-server/src/main/resources/: BUILD
inject/inject-server/src/main/scala/: BUILD
inject/inject-server/src/test/java/: BUILD
inject/inject-server/src/test/scala/: BUILD
inject/inject-slf4j/: BUILD  README
inject/inject-slf4j/src/main/scala/: BUILD
inject/inject-slf4j/src/main/scala/com/twitter/inject/: BUILD  Logging.scala
inject/inject-slf4j/src/main/scala/org/slf4j/: FinagleMDCInitializer.scala
inject/inject-slf4j/src/test/scala/com/twitter/inject/: BUILD  BUILD.bazel  LoggingTest.scala
inject/inject-stack/src/main/scala/com/twitter/inject/: BUILD
inject/inject-thrift/: BUILD
inject/inject-thrift-client/: BUILD  README.md  pom.xml
inject/inject-thrift-client/src/main/java/: BUILD
inject/inject-thrift-client/src/main/scala/: BUILD
inject/inject-thrift-client/src/test/scala/: BUILD
inject/inject-thrift-client/src/test/thrift/: BUILD  echo.thrift  greeter.thrift  serviceA.thrift  snakeCaseService.thrift
inject/inject-thrift/src/main/scala/: BUILD
inject/inject-thrift/src/test/scala/: BUILD
inject/inject-utils/: BUILD
inject/inject-utils/src/main/resources/: BUILD
inject/inject-utils/src/main/scala/: BUILD
inject/inject-utils/src/main/scala/com/twitter/inject/: RootMonitor.scala
inject/inject-utils/src/test/scala/: BUILD
(+6160 files in other folders)
