target(
    tags = ["bazel-compatible"],
    dependencies = [
        "finatra/inject-thrift-client-http-mapper/src/main/scala",
    ],
)

test_suite(
    name = "tests",
    tags = ["bazel-compatible"],
    dependencies = [
        "finatra/inject-thrift-client-http-mapper/src/test/scala",
    ],
)
