test_suite(
    name = "tests",
    tags = ["bazel-compatible"],
    dependencies = [
        "finatra/inject/inject-app/src/test/scala/com/twitter/inject/app/tests",
        "finatra/inject/inject-core/src/test/scala/com/twitter/inject/tests",
        "finatra/inject/inject-modules/src/test/scala/com/twitter/inject/modules/tests",
        "finatra/inject/inject-request-scope/src/test/scala",
        "finatra/inject/inject-server/src/test/scala/com/twitter/inject/server/tests",
        "finatra/inject/inject-server/src/test/scala/com/twitter/server/tests",
        "finatra/inject/inject-thrift-client/src/test/scala",
        "finatra/inject/inject-utils/src/test/scala",
    ],
)
