junit_tests(
    sources = ["*.java"],
    compiler_option_sets = ["fatal_warnings"],
    platform = "java8",
    tags = ["bazel-compatible"],
    dependencies = [
        "3rdparty/jvm/com/google/inject:guice",
        "3rdparty/jvm/junit",
        "3rdparty/jvm/org/mockito:mockito-core",
        "3rdparty/jvm/org/scalatestplus:junit",
        "3rdparty/jvm/org/slf4j:slf4j-api",
        "finagle/finagle-base-http/src/main",
        "finagle/finagle-core/src/main",
        "finagle/finagle-http/src/main/scala",
        "finatra/http-core/src/main/scala/com/twitter/finatra/http/contexts",
        "finatra/http-core/src/main/scala/com/twitter/finatra/http/exceptions",
        "finatra/http-core/src/main/scala/com/twitter/finatra/http/fileupload",
        "finatra/http-core/src/main/scala/com/twitter/finatra/http/marshalling",
        "finatra/http-core/src/main/scala/com/twitter/finatra/http/response",
        "finatra/http-core/src/main/scala/com/twitter/finatra/http/streaming",
        "finatra/inject/inject-app/src/main/scala/com/twitter/inject/app",
        "finatra/inject/inject-core/src/main/scala/com/twitter/inject",
        "finatra/inject/inject-server/src/main/scala/com/twitter/inject/server",
        "finatra/inject/inject-server/src/test/scala/com/twitter/inject/server",
        "finatra/inject/inject-utils/src/main/scala",
        "finatra/jackson/src/main/scala/com/twitter/finatra/jackson/streaming",
        "finatra/utils/src/main/scala/com/twitter/finatra/utils",
        "util/util-app/src/main/scala",
        "util/util-core:scala",
        "util/util-jackson/src/main/scala/com/twitter/util/jackson",
        "util/util-lint/src/main/scala",
        "util/util-slf4j-api/src/main/scala",
        "util/util-stats/src/main/scala",
    ],
)
