junit_tests(
    platform = "java8",
    tags = ["bazel-compatible"],
    dependencies = [
        "finagle/finagle-core/src/main",
        "finagle/finagle-http/src/main/scala",
        "finatra/http-annotations/src/main/java/com/twitter/finatra/http/annotations",
        "finatra/http-core/src/main/scala/com/twitter/finatra/http/marshalling",
        "finatra/http-core/src/main/scala/com/twitter/finatra/http/marshalling/modules",
        "finatra/http-core/src/main/scala/com/twitter/finatra/http/response",
        "finatra/http-core/src/main/scala/com/twitter/finatra/http/streaming",
        "finatra/http-core/src/test/java/com/twitter/finatra/http",
        "finatra/inject/inject-app/src/test/scala/com/twitter/inject/app",
        "finatra/inject/inject-core/src/main/scala",
        "finatra/inject/inject-core/src/test/scala/com/twitter/inject",
        "finatra/jackson/src/main/scala/com/twitter/finatra/jackson/modules",
        "finatra/utils/src/main/scala/com/twitter/finatra/modules",
        "util/util-core:scala",
        "util/util-jackson/src/main/scala/com/twitter/util/jackson",
        "util/util-jackson/src/main/scala/com/twitter/util/jackson/caseclass/exceptions",
        "util/util-mock/src/main/scala/com/twitter/util/mock",
    ],
)
